# plankton

./: README.md  package-lock.json  package.json  vite.config.js
src/: App.vue  main.js  styles.css
src-tauri/: .gitignore  Cargo.toml  Everything.db  Everything.ini  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/api/: clip.rs  everything.rs  mod.rs
src-tauri/src/event/: device.rs  mod.rs
src-tauri/src/system/: app_menu.rs  mod.rs  tray_menu.rs
src/components/: Clipboard.vue  FileList.vue  Greet.vue  Menu.vue
src/router/: index.js
src/store/: index.js
src/views/home/: index.vue
