[package]
name = "plankton"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["system-tray", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 监听和发送事件的键盘和鼠标
rdev = "0.5.3"
# 查询鼠标和键盘状态
device_query = "1.1.3"
# 剪切板
clipboard = "0.5"
libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
tokio = "1.33"
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
